2001-02-10  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in: (xst_network_get_interface_{replace,parse}_table) added wvdial support.
	  (xst_network_ensure_local_host_entry) changed name: added "network" prefix.
	  (xst_network_dialing_set) save the wvdial configuration.
	* network-conf.in: (xml_print_hash) a more general instance of xml_print_interfaces, to
	  handle both interfaces and dialing.
	  (xml_parse_dialing) parse the wvdial configuration from XML to internal hash.
	
2001-02-09  Hans Petter Jansson  <hpj@ximian.com>

	* *-conf.in: Added platform comparisons and die if necessary.

2001-02-09  Hans Petter Jansson  <hpj@ximian.com>

	* platform.pl.in: (xst_platform_ensure_supported): Implement.

2001-02-09  Hans Petter Jansson  <hpj@ximian.com>

	* *.in: Removed -*-perl-*- lines that were confusing Emacs.

2001-02-09  Arturo Espinosa <arturo@ximian.com>

	* network-conf.in: removed a bunch of set_* functions, whose functionality
	  already is in network.pl.in.
	* network.pl.in: almost finished, lots of bug fixes. added bootproto support.
	* replace.pl.in: xst_replace_chat implemented.
	* network.pl.in, replace.pl.in: fixed conflicts with new general function namings.
	* network.pl.in: (xst_network_dialing_get) wvdialer parsing support. Minor indentation fix.
	* parse.pl.in: fix to ini parser and new parser to get ini sections.
	* replace.pl.in: similar fix to ini replacer, and minor indentation fix.
	
2001-02-08  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in: Added missing dependency on service.pl.

2001-02-08  Tambet Ingo  <tambet@ximian.com>

	* boot.pl.in: New file.
	* boot-conf.in: Removed stuff which is in boot.pl.in.

2001-02-07  Hans Petter Jansson  <hpj@ximian.com>

	* be.pl.in, boot-conf.in, disks-conf.in, file.pl.in, 
	  gen-reportcode-list.sh, general.pl.in, guess_system.sh, 
	  hardware-conf.in, media.pl.in, memory-conf.in, 
	  nameresolution-conf.in, network-conf.in, network.pl.in, 